# hw5-hri-2018-ucsd

./: README.md
devel/include/turtlebot_actions/: FindFiducialAction.h  FindFiducialActionFeedback.h  FindFiducialActionGoal.h  FindFiducialActionResult.h  FindFiducialFeedback.h  FindFiducialGoal.h  FindFiducialResult.h  TurtlebotMoveAction.h  TurtlebotMoveActionFeedback.h  TurtlebotMoveActionGoal.h  TurtlebotMoveActionResult.h  TurtlebotMoveFeedback.h  TurtlebotMoveGoal.h  TurtlebotMoveResult.h
devel/include/turtlebot_calibration/: ScanAngle.h
devel/include/turtlebot_survivor/: SurvivorConfig.h
devel/lib/pkgconfig/: turtlebot_actions.pc  turtlebot_calibration.pc  turtlebot_follower.pc  turtlebot_navigation.pc  turtlebot_rapps.pc  turtlebot_survivor.pc
devel/lib/python2.7/dist-packages/turtlebot_survivor/cfg/: SurvivorConfig.py
devel/lib/turtlebot_actions/: find_fiducial_pose  turtlebot_move_action_server
devel/lib/turtlebot_navigation/: laser_footprint_filter
devel/share/common-lisp/ros/turtlebot_actions/msg/: _package.lisp  turtlebot_actions-msg.asd
devel/share/turtlebot_actions/cmake/: turtlebot_actions-msg-paths.cmake  turtlebot_actionsConfig.cmake
devel/share/turtlebot_calibration/cmake/: turtlebot_calibration-msg-paths.cmake  turtlebot_calibrationConfig.cmake
devel/share/turtlebot_follower/cmake/: turtlebot_followerConfig.cmake
devel/share/turtlebot_navigation/cmake/: turtlebot_navigationConfig.cmake
devel/share/turtlebot_rapps/cmake/: turtlebot_rappsConfig.cmake
devel/share/turtlebot_survivor/cmake/: turtlebot_survivorConfig.cmake
devel/share/turtlebot_survivor/docs/: SurvivorConfig-usage.dox
src/turtlebot_follower/launch/: follower.launch
src/turtlebot_survivor/: CMakeLists.txt  package.xml
src/turtlebot_survivor/cfg/: Survivor.cfg
src/turtlebot_survivor/launch/: survivor.launch  survivor.launch~
src/turtlebot_survivor/launch/includes/: velocity_smoother.launch.xml
src/turtlebot_survivor/param/: mux.yaml
src/turtlebot_survivor/plugins/: nodelets.xml
src/turtlebot_survivor/src/: survivor.cpp  survivor.cpp~
